# wasmworker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
demo/: Cargo.toml  index.html  index.js  run.sh
demo/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
src/: channel.rs  channel_task.rs  convert.rs  error.rs  func.rs  global.rs  lib.rs
src/iter_ext/: mod.rs
src/pool/: mod.rs  scheduler.rs
src/webworker/: com.rs  js.rs  mod.rs  worker.rs
test/: Cargo.toml  index.html  index.js  package-lock.json  package.json  tests.spec.mjs
test/src/: channel.rs  convert.rs  lib.rs  raw.rs
test/vite-app/: index.html  index.js  vite.config.js
vite/: index.html  package.json  vite.config.ts
vite/public/: index.js
vite/public/pkg/: README.md  package.json  wasmworker_demo.d.ts  wasmworker_demo.js  wasmworker_demo_bg.wasm  wasmworker_demo_bg.wasm.d.ts
vite/src/components/: HelloWorld.vue
web/: index.html  index.js  worker.js
