[workspace]
members = [".", "proc-macro", "demo", "test"]

[workspace.package]
description = "Dispatching tasks to a WebWorker without `SharedArrayBuffers`."
authors = ["Pascal Berrang <rust@paberr.net>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paberr/wasmworker"
repository = "https://github.com/paberr/wasmworker"
readme = "README.md"
keywords = ["webworker", "parallelism", "wasm"]

[workspace.dependencies]
wasmworker = { version = "0.3", path = ".", features = ["iter-ext", "macros"] }
wasmworker-proc-macro = { version = "0.3", path = "proc-macro" }

[package]
name = "wasmworker"
version = "0.3.0"
edition = "2021"

description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
futures = "0.3"
js-sys = { version = "0.3" }
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
thiserror = "2.0"
tokio = { version = "1.4", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
postcard = { version = "1.1", features = ["alloc"], optional = true }
pot = { version = "3.0.1", optional = true }

[dependencies.web-sys]
features = [
    "MessageEvent",
    "Window",
    "Location",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Navigator",
    "MessagePort",
    "MessageChannel",
    "Response",
]
version = "0.3"

[dev-dependencies]
wasmworker-proc-macro = { workspace = true }

[features]
default = ["iter-ext", "codec-postcard"]
iter-ext = []
codec-postcard = ["dep:postcard"]
codec-pot = ["dep:pot"]
macros = ["wasmworker-proc-macro"]

[dependencies.wasmworker-proc-macro]
workspace = true
optional = true
