[package]
name = "webworker-test"
version = "0.1.0"
edition = "2021"
publish = false

description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
webworker = { workspace = true }
webworker-proc-macro = { workspace = true }
